<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:background="@color/todo_background_app"
    android:orientation="vertical"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/todo_dialog_add_task"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <RadioGroup
        android:id="@+id/radioGroupCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButtonBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_business_category"
            android:checked="true"
            android:text="@string/todo_dialog_category_business"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButtonPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_personal_category"
            android:text="@string/todo_dialog_category_personal"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButtonOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_other_category"
            android:text="@string/todo_dialog_category_other"
            android:textColor="@color/white" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/todo_accent"
        android:text="@string/todo_dialog_add_task_button"
        android:textColor="@color/white" />

</androidx.appcompat.widget.LinearLayoutCompat>