<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superhero.DetailSuperHeroActivity">

    <ImageView
        android:id="@+id/imageViewSuperHeroDetail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewSuperHeroNameDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="lorem ipsum name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <!-- combat, durability, intelligence,  power,  speed,  strength -->

            <View
                android:id="@+id/viewCombat"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/super_hero_combat" />

            <View
                android:id="@+id/viewDurability"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/super_hero_durability" />

            <View
                android:id="@+id/viewIntelligence"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/super_hero_intelligence" />

            <View
                android:id="@+id/viewPower"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/super_hero_power" />

            <View
                android:id="@+id/viewSpeed"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/super_hero_speed" />

            <View
                android:id="@+id/viewStrength"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:background="@color/super_hero_strength" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="140dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/super_hero_combat"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/super_hero_durability"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/super_hero_intelligence"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/super_hero_power"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/super_hero_speed"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/super_hero_strength"
                android:layout_weight="1"
                android:layout_marginHorizontal="5dp"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>