<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/todo_background_app"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".todo.TodoActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="40dp"
            android:text="@string/todo_title"
            android:textAllCaps="false"
            android:textColor="@color/todo_title_text"
            android:textSize="32sp"
            android:textStyle="bold" />

        <!-- Componente sin aplicarle el STYLE -->

        <!--<androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="5dp"
            android:text="@string/todo_categories"
            android:textAllCaps="false"
            android:textColor="@color/todo_subtitle_text"
            android:textSize="22sp" />-->

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/todo_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_categories" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/todo_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_tasks" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="22dp"
        android:backgroundTint="@color/todo_accent"
        android:src="@android:drawable/btn_star"
        app:fabSize="normal"
        app:tint="@color/white" />
</FrameLayout>